compilers/Trabalho Final - Compiladores/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> declaracoes
Rule 1     declaracoes -> tipo lista_variaveis SEMICOLON
Rule 2     tipo -> INT
Rule 3     tipo -> FLOAT
Rule 4     tipo -> CHAR_TYPE
Rule 5     lista_variaveis -> variavel
Rule 6     lista_variaveis -> lista_variaveis COMMA variavel
Rule 7     variavel -> ID
Rule 8     variavel -> ID EQUALS valor
Rule 9     valor -> NUMBER
Rule 10    valor -> CHAR
Rule 11    valor -> STRING
Rule 12    comando -> IF LPAREN condicao RPAREN LBRACE comandos RBRACE
Rule 13    comando -> IF LPAREN condicao RPAREN LBRACE comandos RBRACE ELSE LBRACE comandos RBRACE
Rule 14    comando -> SWITCH LPAREN ID RPAREN LBRACE lista_cases RBRACE
Rule 15    lista_cases -> lista_cases case
Rule 16    lista_cases -> case
Rule 17    lista_cases -> default
Rule 18    case -> CASE valor COLON LBRACE comandos BREAK SEMICOLON RBRACE
Rule 19    default -> DEFAULT COLON LBRACE comandos RBRACE
Rule 20    condicao -> ID relop valor
Rule 21    relop -> EQEQ
Rule 22    relop -> NE
Rule 23    relop -> LT
Rule 24    relop -> GT
Rule 25    relop -> LE
Rule 26    relop -> GE
Rule 27    comando -> WHILE LPAREN condicao RPAREN LBRACE comandos RBRACE
Rule 28    comando -> FOR LPAREN inicializacao SEMICOLON condicao SEMICOLON incremento RPAREN LBRACE comandos RBRACE
Rule 29    inicializacao -> ID EQUALS valor
Rule 30    incremento -> ID EQUALS expressao
Rule 31    comandos -> comandos comando_matematico
Rule 32    comandos -> comando_matematico
Rule 33    comando_matematico -> ID EQUALS expressao SEMICOLON
Rule 34    expressao -> valor
Rule 35    expressao -> valor operador valor
Rule 36    operador -> PLUS
Rule 37    operador -> MINUS
Rule 38    operador -> TIMES
Rule 39    operador -> DIVIDE

Terminals, with rules where they appear

BREAK                : 18
CASE                 : 18
CHAR                 : 10
CHAR_TYPE            : 4
COLON                : 18 19
COMMA                : 6
DEFAULT              : 19
DIVIDE               : 39
ELSE                 : 13
EQEQ                 : 21
EQUALS               : 8 29 30 33
FLOAT                : 3
FOR                  : 28
GE                   : 26
GT                   : 24
ID                   : 7 8 14 20 29 30 33
IF                   : 12 13
INT                  : 2
LBRACE               : 12 13 13 14 18 19 27 28
LE                   : 25
LPAREN               : 12 13 14 27 28
LT                   : 23
MINUS                : 37
NE                   : 22
NUMBER               : 9
PLUS                 : 36
RBRACE               : 12 13 13 14 18 19 27 28
RPAREN               : 12 13 14 27 28
SEMICOLON            : 1 18 28 28 33
STRING               : 11
SWITCH               : 14
TIMES                : 38
WHILE                : 27
error                : 

Nonterminals, with rules where they appear

case                 : 15 16
comando              : 
comando_matematico   : 31 32
comandos             : 12 13 13 18 19 27 28 31
condicao             : 12 13 27 28
declaracoes          : 0
default              : 17
expressao            : 30 33
incremento           : 28
inicializacao        : 28
lista_cases          : 14 15
lista_variaveis      : 1 6
operador             : 35
relop                : 20
tipo                 : 1
valor                : 8 18 20 29 34 35 35
variavel             : 5 6

Parsing method: LALR

state 0

    (0) S' -> . declaracoes
    (1) declaracoes -> . tipo lista_variaveis SEMICOLON
    (2) tipo -> . INT
    (3) tipo -> . FLOAT
    (4) tipo -> . CHAR_TYPE

    INT             shift and go to state 3
    FLOAT           shift and go to state 4
    CHAR_TYPE       shift and go to state 5

    declaracoes                    shift and go to state 1
    tipo                           shift and go to state 2

state 1

    (0) S' -> declaracoes .



state 2

    (1) declaracoes -> tipo . lista_variaveis SEMICOLON
    (5) lista_variaveis -> . variavel
    (6) lista_variaveis -> . lista_variaveis COMMA variavel
    (7) variavel -> . ID
    (8) variavel -> . ID EQUALS valor

    ID              shift and go to state 8

    lista_variaveis                shift and go to state 6
    variavel                       shift and go to state 7

state 3

    (2) tipo -> INT .

    ID              reduce using rule 2 (tipo -> INT .)


state 4

    (3) tipo -> FLOAT .

    ID              reduce using rule 3 (tipo -> FLOAT .)


state 5

    (4) tipo -> CHAR_TYPE .

    ID              reduce using rule 4 (tipo -> CHAR_TYPE .)


state 6

    (1) declaracoes -> tipo lista_variaveis . SEMICOLON
    (6) lista_variaveis -> lista_variaveis . COMMA variavel

    SEMICOLON       shift and go to state 9
    COMMA           shift and go to state 10


state 7

    (5) lista_variaveis -> variavel .

    SEMICOLON       reduce using rule 5 (lista_variaveis -> variavel .)
    COMMA           reduce using rule 5 (lista_variaveis -> variavel .)


state 8

    (7) variavel -> ID .
    (8) variavel -> ID . EQUALS valor

    SEMICOLON       reduce using rule 7 (variavel -> ID .)
    COMMA           reduce using rule 7 (variavel -> ID .)
    EQUALS          shift and go to state 11


state 9

    (1) declaracoes -> tipo lista_variaveis SEMICOLON .

    $end            reduce using rule 1 (declaracoes -> tipo lista_variaveis SEMICOLON .)


state 10

    (6) lista_variaveis -> lista_variaveis COMMA . variavel
    (7) variavel -> . ID
    (8) variavel -> . ID EQUALS valor

    ID              shift and go to state 8

    variavel                       shift and go to state 12

state 11

    (8) variavel -> ID EQUALS . valor
    (9) valor -> . NUMBER
    (10) valor -> . CHAR
    (11) valor -> . STRING

    NUMBER          shift and go to state 14
    CHAR            shift and go to state 15
    STRING          shift and go to state 16

    valor                          shift and go to state 13

state 12

    (6) lista_variaveis -> lista_variaveis COMMA variavel .

    SEMICOLON       reduce using rule 6 (lista_variaveis -> lista_variaveis COMMA variavel .)
    COMMA           reduce using rule 6 (lista_variaveis -> lista_variaveis COMMA variavel .)


state 13

    (8) variavel -> ID EQUALS valor .

    SEMICOLON       reduce using rule 8 (variavel -> ID EQUALS valor .)
    COMMA           reduce using rule 8 (variavel -> ID EQUALS valor .)


state 14

    (9) valor -> NUMBER .

    SEMICOLON       reduce using rule 9 (valor -> NUMBER .)
    COMMA           reduce using rule 9 (valor -> NUMBER .)


state 15

    (10) valor -> CHAR .

    SEMICOLON       reduce using rule 10 (valor -> CHAR .)
    COMMA           reduce using rule 10 (valor -> CHAR .)


state 16

    (11) valor -> STRING .

    SEMICOLON       reduce using rule 11 (valor -> STRING .)
    COMMA           reduce using rule 11 (valor -> STRING .)

